--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>IPFS Message Upload</title>
+    <title>IPFS Message</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.rawgit.com/ethereumjs/browser-builds/ddb27f8d/dist/ethereumjs-tx/ethereumjs-tx-1.3.3.min.js"></script>
@@ -27,7 +27,7 @@
   <body>
     <form action="/">
       <fieldset>
-        <legend>Upload Message</legend>
+        <legend>IPFS Message</legend>
         <textarea rows="4" cols="50" name="message" id="message"></textarea>
         <button type="button" onclick="upload()">Upload</button>
       </fieldset>
